# power_control

./: .gitignore  API.md  CHANGELOG.md  CMakeLists.txt  README.md  idf_component.yml
.github/workflows/: host_test.yml
coverage/: cmd_line  index-sort-b.html  index-sort-f.html  index-sort-l.html  index.html
coverage/include/: index-sort-b.html  index-sort-f.html  index-sort-l.html  index.html  power_control.hpp.func-c.html  power_control.hpp.func.html  power_control.hpp.gcov.html
coverage/src/: index-sort-b.html  index-sort-f.html  index-sort-l.html  index.html  power_control.cpp.func-c.html  power_control.cpp.func.html  power_control.cpp.gcov.html
examples/basic_usage/: CMakeLists.txt
examples/basic_usage/main/: CMakeLists.txt  main.cpp
host_test/: CMakeLists.txt  README.md  coverage_common.cmake
host_test/gtest/: CMakeLists.txt
host_test/test_gpio_hal/: CMakeLists.txt  test_gpio_hal.cpp
host_test/test_power_control/: CMakeLists.txt
host_test/test_power_control/main/: CMakeLists.txt  main.cpp  test_power_control.cpp
include/: gpio_hal.hpp  gpio_hal_interface.hpp  power_control.hpp  power_control_interface.hpp
include/interfaces/: i_gpio_hal.hpp  i_power_control.hpp
src/: gpio_hal.cpp  power_control.cpp
test_apps/build_test/: CMakeLists.txt  sdkconfig.defaults
test_apps/build_test/main/: main.cpp
test_apps/test_build/main/: CMakeLists.txt  main.cpp
